--- a/phones.html
+++ b/phones.html
@@ -11,9 +11,9 @@
   <body>
     <h1 class="phone-heading">SELECT THE BRAND</h1>
     <a href="https://www.apple.com/in/iphone/">
-           <img class="brandlogo"src="phone images\poconew.jpg" alt=""></a>
+           <img class="brandlogo"src="phone images\iphone1.jpg" alt=""></a>
            <img class="brandlogo"src="phone images\samsung.jpg" alt="">
-           <img class="brandlogo"src="phone images\iphone1.jpg" alt="">
+           <img class="brandlogo"src="phone images\poco.jpg" alt="">
            <img class="brandlogo"src="phone images\one plus.jpg" alt="">
 
 
