--- a/phones.html
+++ b/phones.html
@@ -13,7 +13,7 @@
     <a href="https://www.apple.com/in/iphone/">
            <img class="brandlogo"src="phone images\iphone1.jpg" alt=""></a>
            <img class="brandlogo"src="phone images\samsung.jpg" alt="">
-           <img class="brandlogo"src="phone images\poco.jpg" alt="">
+           <img class="brandlogo"src="phone images\poconew.jpg" alt="">
            <img class="brandlogo"src="phone images\one plus.jpg" alt="">
 
 
